<resources>
    <string name="app_name">My Modules</string>
    <string name="module_details">Module Details</string>
    <string name="tvModuleCode">Module Code:</string>
    <string name="module_name">Module Name:</string>
    <string name="academic_year">Academic Year:</string>
    <string name="semester">Semester:</string>
    <string name="venue">Venue:</string>
    <string name="module_credit">Module Credit:</string>
    <string name="programming_modules">Programming Modules</string>
    <string name="c346">C346</string>
    <string name="c203">C203</string>
    <string name="back">Back</string>
</resources>